test_outputs/connlist/anp_and_banp_using_networks_test_connlist_output.txt
0.0.0.0-8.8.4.3 => ns1/pod1[Deployment] : All Connections
0.0.0.0-8.8.4.3 => ns2/pod1[Deployment] : All Connections
10.0.0.0-10.255.255.255 => ns1/pod1[Deployment] : All Connections
10.0.0.0-10.255.255.255 => ns2/pod1[Deployment] : All Connections
11.0.0.0-60.45.71.255 => ns1/pod1[Deployment] : All Connections
11.0.0.0-60.45.71.255 => ns2/pod1[Deployment] : All Connections
208.67.222.222-208.67.222.222 => ns1/pod1[Deployment] : All Connections
208.67.222.222-208.67.222.222 => ns2/pod1[Deployment] : All Connections
208.67.222.223-255.255.255.255 => ns1/pod1[Deployment] : All Connections
208.67.222.223-255.255.255.255 => ns2/pod1[Deployment] : All Connections
60.45.72.0-60.45.75.255 => ns1/pod1[Deployment] : All Connections
60.45.72.0-60.45.75.255 => ns2/pod1[Deployment] : All Connections
60.45.76.0-89.246.179.255 => ns1/pod1[Deployment] : All Connections
60.45.76.0-89.246.179.255 => ns2/pod1[Deployment] : All Connections
8.8.4.4-8.8.4.4 => ns1/pod1[Deployment] : All Connections
8.8.4.4-8.8.4.4 => ns2/pod1[Deployment] : All Connections
8.8.4.5-8.8.8.7 => ns1/pod1[Deployment] : All Connections
8.8.4.5-8.8.8.7 => ns2/pod1[Deployment] : All Connections
8.8.8.8-8.8.8.8 => ns1/pod1[Deployment] : All Connections
8.8.8.8-8.8.8.8 => ns2/pod1[Deployment] : All Connections
8.8.8.9-9.255.255.255 => ns1/pod1[Deployment] : All Connections
8.8.8.9-9.255.255.255 => ns2/pod1[Deployment] : All Connections
89.246.180.0-89.246.183.255 => ns1/pod1[Deployment] : All Connections
89.246.180.0-89.246.183.255 => ns2/pod1[Deployment] : All Connections
89.246.184.0-208.67.222.221 => ns1/pod1[Deployment] : All Connections
89.246.184.0-208.67.222.221 => ns2/pod1[Deployment] : All Connections
ns1/pod1[Deployment] => 10.0.0.0-10.255.255.255 : UDP 53
ns1/pod1[Deployment] => 60.45.72.0-60.45.75.255 : All Connections
ns1/pod1[Deployment] => 89.246.180.0-89.246.183.255 : All Connections
ns1/pod1[Deployment] => ns2/pod1[Deployment] : All Connections
ns2/pod1[Deployment] => 60.45.72.0-60.45.75.255 : All Connections
ns2/pod1[Deployment] => 89.246.180.0-89.246.183.255 : All Connections
ns2/pod1[Deployment] => ns1/pod1[Deployment] : All Connections
